Toi vua thay doi trang index

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	 						<a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
 	 						<a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 	 						<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-	 						<a href="" class="btn btn-danger btn-lg nut">ORDER ONLINE</a>
+	 				<!-- 		<a href="" class="btn btn-danger btn-lg nut">ORDER ONLINE</a> -->
 	 					</div>	<!-- end nut_order -->
  					</div>	<!-- end phai -->
  				</div>	<!-- end col-4 -->
