--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					            <a class="nav-link" href="#">HOME</a>
 					          </li>
 					          <li class="nav-item">
-					            <a class="nav-link" href="#">ABOUT US</a>
+					            <a class="nav-link" href="about.html">ABOUT US</a>
 					          </li>
 					          <li class="nav-item">
 					            <a class="nav-link" href="#">OUR SERVICES</a>
